--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,59 @@
-/*Maak hier jouw CSS!*/
+/*CSS Reset*/
+* {
+    margin: 0;
+    padding: 0;
+}
+/*styling for mobile devices*/
+.container{
+    /*background-color: hsl(201, 34%, 48%);*/
+    background-color: hsl(31, 18%, 54%);
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:50px auto repeat(5,50) ;
+    row-gap: 16px;
+    column-gap: 16px;
+    grid-template-areas: "a" "b" "c" "d" "e" ". " "f";
+}
+
+.item{
+    background-color: hsl(201, 34%, 48%);
+    border: 2px solid hsl(201, 34%, 48%);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 14px;
+}
+
+#item-a{
+    grid-area: a;
+}
+#item-b{
+    grid-area: b;
+}
+#item-c{
+    grid-area: c;
+}
+#item-d{
+    grid-area: d;
+}
+#item-e{
+    grid-area: e;
+}
+#item-f{
+    grid-area: f;
+}
+
+@media screen and (min-width: 576px){
+    .container{
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: 50px 190px 100px auto 50px;
+        grid-template-areas:
+        "a" "c" "c"
+        "b" "c" "c"
+        "b" "e" "d"
+        "b" "e" "."
+        "f" "f" "f";
+    }
+}
